@@ -47,6 +47,7 @@
     over space.
 33. Update copy of ebur128
 34. Install QtMultimedia required dlls for windows.
+35. Re-add option to show menumbar for Linux builds if not run under GNOME.
 
 2.2.0
 -----
